[gd_scene load_steps=5 format=3 uid="uid://bwfjtpbise38g"]

[ext_resource type="Script" path="res://Prefabs/Main/main.gd" id="1_owli5"]
[ext_resource type="PackedScene" uid="uid://dah7vrnh71h72" path="res://Prefabs/Mob/mob.tscn" id="2_gwurl"]
[ext_resource type="PackedScene" uid="uid://df5l30jd70q1o" path="res://Prefabs/Player/player.tscn" id="3_es1eo"]

[sub_resource type="Curve2D" id="Curve2D_s00of"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_owli5")
mob_scene = ExtResource("2_gwurl")

[node name="Timer_Mob" type="Timer" parent="."]
wait_time = 0.5

[node name="Timer_ScoreTimer" type="Timer" parent="."]

[node name="Timer_StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="Mob_Path" type="Path2D" parent="."]
curve = SubResource("Curve2D_s00of")

[node name="Mob_Spawn_Location" type="PathFollow2D" parent="Mob_Path"]

[node name="Player" parent="." instance=ExtResource("3_es1eo")]

[connection signal="timeout" from="Timer_Mob" to="." method="_on_timer_mob_timeout"]
[connection signal="timeout" from="Timer_ScoreTimer" to="." method="_on_timer_score_timer_timeout"]
[connection signal="timeout" from="Timer_StartTimer" to="." method="_on_timer_start_timer_timeout"]
[connection signal="hit" from="Player" to="." method="_on_player_hit"]
